force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/pd_jp_20151124__ABM_VisitorActivity__c.object-meta.xml
<CustomObject>
    <label>MAPlusAC VisitorActivity</label>
    <nameField>
        <displayFormat>{YYYY}{MM}{DD}{000000}</displayFormat>
        <label>VisitorActivity名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>