force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__AC_Prospect__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__AC_Prospect__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MAPlusAC プロスペクト</label>
    <referenceTo>pd_jp_20151124__AC_Prospect__c</referenceTo>
    <relationshipLabel>MAPlusAC VisitorActivity</relationshipLabel>
    <relationshipName>VisitorActivity</relationshipName>
    <type>Lookup</type>
</CustomField>