force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Campaign_Crm__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Campaign_Crm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRMキャンペーン名</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>MAPlusAC VisitorActivity</relationshipLabel>
    <relationshipName>Campaign_Crm</relationshipName>
    <type>Lookup</type>
</CustomField>