force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__campaign_id__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__campaign_id__c</fullName>
    <label>PardotキャンペーンID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>