force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__campaign_name__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__campaign_name__c</fullName>
    <label>Pardotキャンペーン名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>