force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Email_Created_At__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Email_Created_At__c</fullName>
    <label>メール作成日</label>
    <type>DateTime</type>
</CustomField>