force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Email_Name__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Email_Name__c</fullName>
    <label>メール登録名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>