force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Email_Title__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Email_Title__c</fullName>
    <label>メール件名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>