force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__extension_activity_name__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__extension_activity_name__c</fullName>
    <label>外部アクティビティ名称</label>
    <length>255</length>
    <type>Text</type>
</CustomField>