force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Id__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Id__c</fullName>
    <externalId>true</externalId>
    <label>ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>