force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Opportunity_Crm__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Opportunity_Crm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CRM商談</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>MAPlusAC VisitorActivity</relationshipLabel>
    <relationshipName>VisitorActivity</relationshipName>
    <type>Lookup</type>
</CustomField>