force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__pageviews__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__pageviews__c</fullName>
    <label>pageviews</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>