force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__Pardot_DocodocoJp__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__Pardot_DocodocoJp__c</fullName>
    <label>MAPlusAC マスターデータ</label>
    <referenceTo>pd_jp_20151124__Pardot_DocodocoJp__c</referenceTo>
    <relationshipLabel>MAPlusAC VisitorActivity</relationshipLabel>
    <relationshipName>VisitorActivitys</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>