force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__type__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__type__c</fullName>
    <label>Activity種類</label>
    <length>18</length>
    <type>Text</type>
</CustomField>