force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__visit_stay_seconds__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__visit_stay_seconds__c</fullName>
    <label>Visit滞在期間（秒）</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>