force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/pd_jp_20151124__visitor_page_view_id__c.field-meta.xml
<CustomField>
    <fullName>pd_jp_20151124__visitor_page_view_id__c</fullName>
    <label>VisitorPageViewID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>