force-app/main/default/objects/pd_jp_20151124__ABM_VisitorActivity__c/fields/relatedAccountId__c.field-meta.xml
<CustomField>
    <fullName>relatedAccountId__c</fullName>
    <formula>CASESAFEID(pd_jp_20151124__AC_Prospect__r.pd_jp_20151124__Account__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所属取引先ID</label>
    <type>Text</type>
</CustomField>